[package]
name = "TracedLibrary"
version = "0.1.0"
authors = ["Sujit Joshi <joshi.sujit020386@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.24", features = ["log"] }
tracing-attributes = "0.1.13"